/*
 *     Copyright 2022 The Dragonfly Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package dfproxy;

import "pkg/rpc/base/base.proto";
import "pkg/rpc/dfdaemon/dfdaemon.proto";

option go_package = "d7y.io/dragonfly/v2/pkg/rpc/dfproxy";

enum ReqType{
  HeartBeat = 0;
  StatTask = 1;
  ImportTask = 2;
  ExportTask = 3;
  DeleteTask = 4;
}

message DfCacheReq{
  dfdaemon.StatTaskRequest stat_task = 1;
  dfdaemon.ImportTaskRequest import_task = 2;
  dfdaemon.ExportTaskRequest export_task = 3;
  dfdaemon.DeleteTaskRequest delete_task = 4;
}

message ProxyClientPacket{
  ReqType type = 1;
  base.GrpcDfError result = 2;
}

message ProxyServerPacket{
  ReqType type = 1;
  DfCacheReq cache_req = 2;
}

// Proxy RPC Service
service Proxy{
  // Proxy service
  rpc ProxyService(stream ProxyClientPacket)returns(stream ProxyServerPacket);
}

